Also fix some of the other breaks on the page.

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -18,6 +18,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
   padding: 0;
+  padding: 0;
   border: 0;
   font-size: 100%;
 
